# learning

./: .gitignore  main.py  pyproject.toml
infra/: approximation.py  prepare.py  segmentation.py  visual.py
src/: main.py  opt.py
src/infra/: approximation.py  prepare.py  segmentation.py  visual.py
