[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.9.2",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "mypy-extensions>=1.1.0",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "ruff>=0.11.8",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "setuptools==80.2.0",
    "tensorflow>=2.19.0",
    "types-tensorflow>=2.18.0.20250503",
]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]
preview = true

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 88